# insightsaiproject

./: .env.dev  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: api.py
app/api/endpoints/: documents.py  elasticsearch.py  home.py  llm.py
app/controllers/: __init__.py  base.py  documents.py  elasticsearch.py  llms.py
app/core/: config.py  server.py
app/core/database/: create_db.py  session.py
app/core/exceptions/: __init__.py  base.py
app/core/factory/: factory.py
app/core/middlewares/: sqlalchemy.py
app/integrations/: es.py  llm.py
app/models/: __init__.py  documents.py
app/repositories/: __init__.py  base.py  documents.py
app/schemas/elasticsearch/: es.py
app/schemas/requests/: efilter.py  esearch.py  semantic_search.py
app/schemas/responses/: document.py  efilter.py  esearch.py  llm.py  semantic_search.py
app/utils/: logger.py
migrations/: env.py
migrations/versions/: 073c7cdeee65_documents_added.py  16d029ce15c8_documents_more_metrics_added.py  59db119624d7_removed_kpi_fields.py  80ab5042146f_documents_indexed.py
